# advisor.ai-backend

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTORS.txt  README.md  local.yml  manage.py  production.yml  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml
apps/: conftest.py
apps/exports/: admin.py  apps.py  managers.py  models.py  utils.py
apps/exports/migrations/: 0001_initial.py
apps/ml/: admin.py  apps.py  encoders.py  managers.py  services.py
apps/ml/migrations/: 0001_initial.py
apps/ml/models/: __init__.py  base.py  surprise.py
apps/papers/: admin.py  apps.py  filters.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  signals.py  tasks.py  views.py
apps/papers/management/commands/: createfakepapers.py  createpaperssuggestions.py  exportdatasets.py  trainmodel.py  updatepapersreviews.py
apps/papers/migrations/: 0001_initial.py  0002_paper_reviews_count_paper_reviews_last_updated_and_more.py  0003_paper_reviews_average.py  0004_remove_paper_reviews_last_updated_paper_index_and_more.py  0005_alter_author_uuid_alter_paper_uuid.py
apps/papers/tests/: factories.py
apps/reviews/: admin.py  apps.py  filters.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  signals.py  tasks.py  views.py
apps/reviews/management/commands/: createfakereviews.py
apps/reviews/migrations/: 0001_initial.py  0002_alter_review_paper.py  0003_alter_review_uuid.py
apps/reviews/tests/: factories.py
apps/suggestions/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  views.py
apps/suggestions/migrations/: 0001_initial.py
apps/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  views.py
apps/users/management/commands/: createdefaultgroups.py  createfakeusers.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_name_alter_user_phone_number.py
apps/users/tests/: factories.py  test_managers.py  test_models.py  test_views.py
apps/users/tests/test_management/test_commands/: test_createdefaultgroups.py
common/: models.py
common/utils/: cache.py
compose/local/django/: Dockerfile  start
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.yml
config/: celery.py  router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
config/tests/: test_swagger.py  test_urls.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
